--- a/views/registration.html
+++ b/views/registration.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="../js/registration.js"></script>
 </head>
 <body>
     <form action="" method="post">
@@ -11,19 +13,19 @@
             <tr>
                 <th>Enter Username</th>
                 <td>
-                    <input type="text" name="username" id="" placeholder="Enter Username">
+                    <input type="text" name="username" id="username" placeholder="Enter Username">
                 </td>
             </tr>
             <tr>
                 <th>Enter Password</th>
                 <td>
-                    <input type="password" name="password" id="" placeholder="Enter Password">
+                    <input type="password" name="password" id="password" placeholder="Enter Password">
                 </td>
             </tr>
             <tr>
                 <th>Confirm Passowrd</th>
                 <td>
-                    <input type="password" name="cpassword" id="" placeholder="Retype Password">
+                    <input type="password" name="cpassword" id="cpassword" placeholder="Retype Password">
                 </td>
             </tr>
             <tr>
@@ -31,7 +33,7 @@
                     Firstname
                 </th>
                 <td>
-                    <input type="text" name="firstname" id=""  placeholder="Enter Firstname">
+                    <input type="text" name="firstname" id="firstname"  placeholder="Enter Firstname">
                 </td>
             </tr>
             <tr>
@@ -39,7 +41,7 @@
                     Lastname
                 </th>
                 <td>
-                    <input type="text" name="lastname" id="" placeholder="Enter Lastname">
+                    <input type="text" name="lastname" id="lastname" placeholder="Enter Lastname">
                 </td>
             </tr>
             <tr>
